--- a/nfpm.yaml
+++ b/nfpm.yaml
@@ -24,6 +24,12 @@ contents:
     file_info:
       mode: 0755
 
+  # Log rotate
+  - src: ./src/logrotate
+    dst: /etc/logrotate.d/tedge-benchmark
+    file_info:
+      mode: 0644
+
   # service definitions
   - src: ./src/services/systemd/*
     dst: /lib/systemd/system/
